--- a/customfoldericons/Resources/en.lproj/Root.strings
+++ b/customfoldericons/Resources/en.lproj/Root.strings
@@ -4,3 +4,4 @@
 "Hide Minigrid" = "Hide Minigrid";
 "Source code ~ Lizynz" = "Source code ~ Lizynz";
 "Source code ~ magn2o" = "Source code ~ magn2o";
+"Author" = "Author";
