--- a/customfoldericons/Resources/ru.lproj/Root.strings
+++ b/customfoldericons/Resources/ru.lproj/Root.strings
@@ -4,3 +4,4 @@
 "Hide Minigrid" = "Скрыть сетку приложений";
 "Source code ~ Lizynz" = "Исходный код ~ Lizynz";
 "Source code ~ magn2o" = "Исходный код ~ magn2o";
+"Author" = "Автор";
